# QuestForTrueColor

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
assets/map_project/: QuestForTrueColor.ldtk
assets/map_project/QuestForTrueColor/backups/51ab0f20-b0a0-11ee-a904-ad57c7e75c94_2024-03-03_15-04-39_crash/: QuestForTrueColor.ldtk
assets/sprite_project/: Sprites.aseprite
src/: collectables.cc  entities.cc  game.cc  main.cpp  menu.cc  minigames.cc  npcs.cc  player.cc  player.cpp  ui.cc
src/characters/: animation.h  character.h  collision.h
src/core/: anderson.h  animation.h  audio.h  bee.h  coin.h  core.h  items.h  map.h  menu.h  node.h  nodes.h  player.h  quest.h  registry.h  renderer.h  scene.h  ui.h
